REOPENED286096
Have GraphicsContextGLImageExtractor::imagePixelData() return a span
https://bugs.webkit.org/show_bug.cgi?id=286096
Summary Have GraphicsContextGLImageExtractor::imagePixelData() return a span
Chris Dumez
Reported 2025-01-16 14:11:09 PST
Have GraphicsContextGLImageExtractor::imagePixelData() return a span.
Attachments
Chris Dumez
Comment 1 2025-01-16 14:13:25 PST
EWS
Comment 2 2025-01-16 17:24:49 PST
Committed 289032@main (6b85e2966feb): <https://commits.webkit.org/289032@main> Reviewed commits have been landed. Closing PR #39148 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-16 17:25:15 PST
Fujii Hironori
Comment 4 2025-01-19 13:18:33 PST
Windows Skia port can't compile after 289032@main. I'm going to fix it. In file included from C:\webkit\wc\WebKitBuild\Debug\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-10.cpp:5: In file included from C:\webkit\wc\Source\WebCore\platform/SharedBuffer.cpp:50: In file included from C:\webkit\wc\Source\WebCore\platform\graphics\skia\SkiaSpanExtras.h:28: C:\webkit\wc\WebKitBuild\Debug\Skia\Headers\top\skia/core/SkPixmap.h(419,16): error: cast from 'const char *' to 'const uint16_t *' (aka 'const unsigned short *') increases required alignment from 1 to 2 [-Werror,-Wcast-align] 419 | return (const uint16_t*)((const char*)this->addr16() + (size_t)y * fRowBytes + (x << 1)); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wc\WebKitBuild\Debug\Skia\Headers\top\skia/core/SkPixmap.h(437,16): error: cast from 'const char *' to 'const uint32_t *' (aka 'const unsigned int *') increases required alignment from 1 to 4 [-Werror,-Wcast-align] 437 | return (const uint32_t*)((const char*)this->addr32() + (size_t)y * fRowBytes + (x << 2)); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wc\WebKitBuild\Debug\Skia\Headers\top\skia/core/SkPixmap.h(455,16): error: cast from 'const char *' to 'const uint64_t *' (aka 'const unsigned long long *') increases required alignment from 1 to 8 [-Werror,-Wcast-align] 455 | return (const uint64_t*)((const char*)this->addr64() + (size_t)y * fRowBytes + (x << 3)); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 3 errors generated.
Fujii Hironori
Comment 5 2025-01-19 13:20:38 PST
EWS
Comment 6 2025-01-19 14:30:40 PST
Committed 289140@main (45c7540c4d1f): <https://commits.webkit.org/289140@main> Reviewed commits have been landed. Closing PR #39275 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.