Have GraphicsContextGLImageExtractor::imagePixelData() return a span https://bugs.webkit.org/show_bug.cgi?id=286096

Reviewed by Geoffrey Garen.

This also addresses the issue where the data size is not always correctly
calculated in WebGLRenderingContextBase::texImageImpl(), which was preventing
me from doing further bounds checking (since the span has the wrong size).

* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageImpl):
* Source/WebCore/platform/graphics/GraphicsContextGLImageExtractor.h:
(WebCore::GraphicsContextGLImageExtractor::imagePixelData):
* Source/WebCore/platform/graphics/cairo/GraphicsContextGLCairo.cpp:
(WebCore::span):
(WebCore::GraphicsContextGLImageExtractor::extractImage):
* Source/WebCore/platform/graphics/cg/GraphicsContextGLCG.cpp:
(WebCore::GraphicsContextGLImageExtractor::extractImage):
* Source/WebCore/platform/graphics/skia/GraphicsContextGLSkia.cpp:
(WebCore::GraphicsContextGLImageExtractor::extractImage):
* Source/WebCore/platform/graphics/skia/ImageBufferSkiaUnacceleratedBackend.cpp:
(WebCore::span): Deleted.
(WebCore::mutableSpan): Deleted.
* Source/WebCore/platform/graphics/skia/SkiaSpanExtras.h:
(WebCore::span):
(WebCore::mutableSpan):

Canonical link: https://commits.webkit.org/289032@main