Source/WebCore/platform/graphics/cairo/GraphicsContextGLCairo.cpp
@@ -40,6 +40,13 @@
 
 namespace WebCore {
 
+static std::span<const uint8_t> span(cairo_surface_t* surface)
+{
+    size_t stride = cairo_image_surface_get_stride(surface);
+    size_t height = cairo_image_surface_get_height(surface);
+    return unsafeMakeSpan(cairo_image_surface_get_data(surface), stride * height);
+}
+
 GraphicsContextGLImageExtractor::~GraphicsContextGLImageExtractor() = default;
 
 bool GraphicsContextGLImageExtractor::extractImage(bool premultiplyAlpha, bool ignoreGammaAndColorProfile, bool)
@@ -97,7 +104,7 @@ bool GraphicsContextGLImageExtractor::extractImage(bool premultiplyAlpha, bool i
             ++srcUnpackAlignment;
     }
 
-    m_imagePixelData = cairo_image_surface_get_data(m_imageSurface.get());
+    m_imagePixelData = span(m_imageSurface.get());
     m_imageSourceFormat = DataFormat::BGRA8;
     m_imageSourceUnpackAlignment = srcUnpackAlignment;
     return true;
